# serializer version: 1
# name: test_filter_tags_by_name
  list([
    ImmichTag(
      color=None,
      created_at=datetime.datetime(2025, 5, 12, 20, 0, 45, 220000, tzinfo=datetime.timezone.utc),
      name='Halloween',
      parent_id=None,
      tag_id='67301cb8-cb73-4e8a-99e9-475cb3f7e7b5',
      updated_at=datetime.datetime(2025, 5, 12, 20, 0, 47, 224000, tzinfo=datetime.timezone.utc),
      value='Halloween',
    ),
  ])
# ---
# name: test_get_all_tags
  list([
    ImmichTag(
      color=None,
      created_at=datetime.datetime(2025, 5, 12, 20, 1, 24, 330000, tzinfo=datetime.timezone.utc),
      name='My 30th birthday',
      parent_id=None,
      tag_id='14ce3af3-67be-41c6-b77c-b25abddaf546',
      updated_at=datetime.datetime(2025, 5, 12, 20, 1, 24, 412000, tzinfo=datetime.timezone.utc),
      value='My 30th birthday',
    ),
    ImmichTag(
      color=None,
      created_at=datetime.datetime(2025, 5, 12, 20, 0, 45, 220000, tzinfo=datetime.timezone.utc),
      name='Halloween',
      parent_id=None,
      tag_id='67301cb8-cb73-4e8a-99e9-475cb3f7e7b5',
      updated_at=datetime.datetime(2025, 5, 12, 20, 0, 47, 224000, tzinfo=datetime.timezone.utc),
      value='Halloween',
    ),
    ImmichTag(
      color=None,
      created_at=datetime.datetime(2025, 5, 12, 20, 0, 49, 967000, tzinfo=datetime.timezone.utc),
      name='Holidays',
      parent_id=None,
      tag_id='69bd487f-dc1e-4420-94c6-656f0515773d',
      updated_at=datetime.datetime(2025, 5, 12, 20, 0, 55, 575000, tzinfo=datetime.timezone.utc),
      value='Holidays',
    ),
  ])
# ---
# name: test_get_tag_by_id
  ImmichTag(
    color=None,
    created_at=datetime.datetime(2025, 5, 12, 20, 1, 24, 330000, tzinfo=datetime.timezone.utc),
    name='My 30th birthday',
    parent_id=None,
    tag_id='14ce3af3-67be-41c6-b77c-b25abddaf546',
    updated_at=datetime.datetime(2025, 5, 12, 20, 1, 24, 412000, tzinfo=datetime.timezone.utc),
    value='My 30th birthday',
  )
# ---
